added the second blog

--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
         Non nisi quibusdam molestias quas a et sunt minima molestiae! 
         Rerum totam delectus aperiam voluptas saepe deserunt animi, 
         sunt nostrum soluta praesentium?</p>
+        <div>
+            <h3>my second website</h3>
+    <p class="second">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+        Non nisi quibusdam molestias quas a et sunt minima molestiae! 
+        Rerum totam delectus aperiam voluptas saepe deserunt animi, 
+        sunt nostrum soluta praesentium?</p>
+        </div>
 </body>
 </html>
