added the ordered list

--- a/index.html
+++ b/index.html
@@ -19,5 +19,15 @@
         Rerum totam delectus aperiam voluptas saepe deserunt animi, 
         sunt nostrum soluta praesentium?</p>
         </div>
+        <div>
+            <h3>you have to push incremental code</h3>
+            <ol>
+                <li>
+                    git add .
+                </li>
+                <li>git commit -m"added a meaningfull commit message"</li>
+                <li>git push</li>
+            </ol>
+        </div>
 </body>
 </html>
